Fix display of the gif in blog post on small screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -253,7 +253,7 @@ html, body {
 
 .top_gif {
   float:right;
-    max-width: 300px;
+    max-width: 45%;
     margin-left: 10px;
 }
 
